--- a/index.html
+++ b/index.html
@@ -94,11 +94,18 @@
         .noise:hover {
         opacity: .75;
         }
+
+        .shutup {
+
+        position: absolute;
+        bottom: 5px;
+        left: 20px;
+        }
       </style>
     </head>
     <body>
       <h1>Boring Engineering</h1>
-
+      <span class="shutup">shut up</span>
       <section>
         <a class="loop demo" href="http://sequence.cassettetap.es">
             <div class="noise">
@@ -126,5 +133,6 @@
         <a href="tinyletter.com/meandave">newsletter</a>
         <a href="http://twitter.com/meandave2020">author</a>
       </section>
+      <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
