--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-weight: 700;
         background: #E0FFAB;
         }
-        section {width: 3200px;}
+        section {width: 3800px;}
         a {display: inline-block;}
         .demo{
         width: 600px;
@@ -83,6 +83,21 @@
     top: -33%;
   text-shadow: 10px 5px 5px #838383;
   left: 10%;
+       }
+
+               .harp {
+            background: url(alice.jpg);
+  background-size: 100%;
+  background-position: 16% 66%;
+        }
+
+        .harp p {
+              color: #FAF664;
+  transform: rotate(46deg);
+  font-size: 2em;
+    top: -33%;
+  text-shadow: 10px 5px 5px #838383;
+  left: 10%;
         }
 
         .noise {
@@ -129,6 +144,11 @@
         <a class="edit demo" idx="4" href="http://edit.cassettetap.es">
           <div class="noise"></div>
           <p>edit</p>
+        </a>
+
+        <a class="harp demo" idx="5" href="http://davejustice.com/harp">
+          <div class="noise"></div>
+          <p>harp</p>
         </a>
 
         <a href="mailto:davejustishh@gmail.com">ideas</a>
